Update Project1 -Linear Regression Ecommerce.ipynb

--- a/Project1 -Linear Regression Ecommerce.ipynb
+++ b/Project1 -Linear Regression Ecommerce.ipynb
@@ -499,8 +499,7 @@
     }
    ],
    "source": [
-    "sns.pairplot(customers)"
-   ]
+    "sns.pairplot(customers)"]
   },
   {
    "cell_type": "code",
